다음 정보를 model에 담아서 뷰에 전달

--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -16,6 +16,7 @@
 
     <ul>
         <li>오류 정보</li>
+        <!-- 다음 정보를 model에 담아서 뷰에 전달 -->
         <ul>
             <li th:text="|timestamp: ${timestamp}|"></li>
             <li th:text="|path: ${path}|"></li>
